[package]
name = "lsm-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.52", features = ["backtrace"] }
byteorder = "1"
dashmap = "5.4.0"
tempfile = "3"
log = "0.4.17"
lru = "0.8.1"
serde = { version = "1.0.147", features = ["derive"] }

[profile.dev]
opt-level = 0
debug = 2

[profile.test]
opt-level = 3